--- a/pom.xml
+++ b/pom.xml
@@ -3,16 +3,15 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.litts.util</groupId>
-  <artifactId>bitflag</artifactId>
+  <artifactId>bitflags</artifactId>
   <version>1.0.0</version>
-  <packaging>jar</packaging>
 
   <name>BitFlags</name>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>8</maven.compiler.source>
-    <maven.compiler.target>8</maven.compiler.target>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
   </properties>
 
   <dependencies>
